# prak-mmp-5-semestr-task3

./: .dockerignore  .gitignore  Dockerfile.streamlit  Makefile  README.md  REPORT.md  docker-compose.yml  pyproject.toml  report.tex  requirements.txt
backend/: Dockerfile  Makefile  alembic.ini  app.py  ml_app.py
backend/src/alembic/: env.py
backend/src/database/: base.py  database.py  db_error_handler.py  models.py  session_manager.py
backend/src/experiments/: router.py  schemas.py  service.py
backend/src/minio/: minio_client.py  minio_utils.py
backend/src/schemas/: authorization.py  base_schemas.py  config.py
backend/src/users/: dao.py  router.py  schemas.py  utils.py
data/: test.csv  test_dataset.csv
docs/: DOCKER.md  ENTITY_ARCHITECTURE.md  QUICKSTART_DOCKER.md  done.md  task.md
ensembles/: backend.py  boosting.py  frontend.py  random_forest.py  utils.py
experiments/: README.md  exp.ipynb
frontend/: .dockerignore  Dockerfile  nginx.default.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.ts
frontend/config/: buildDevServer.ts  buildLoaders.ts  buildPlugins.ts  buildResolvers.ts  buildWebpackConfig.ts
frontend/config/types/: config.ts
frontend/public/: index.html
frontend/src/: index.jsx
frontend/src/adminView/layout/: elements.js
frontend/src/app/: App.jsx
frontend/src/app/styles/: index.css  reset.css
frontend/src/shared/api/: AuthApi.js  ChatAPI.js  MessageAPI.js  PhotosApi.js  ProjectAPI.js  (+1 more)
report/: 1.tex
tests/: Dockerfile  check-docker.sh  test_implementation.py  test_save_load.py
(+290 files in other folders)
