[project]
name = "ansambles-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Akramov",email = "akramovromanr@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.123.0,<0.124.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]

[tool.poetry]
packages = [{include = "backend"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
