[project]
name = "ansambles-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Akramov",email = "akramovromanr@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.123.0,<0.124.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "miniopy-async (>=1.23.4,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "jose (>=1.0.0,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "backend"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
